force-app/main/default/objects/Assessment_Criteria_Definition__c/Assessment_Criteria_Definition__c.object-meta.xml
<CustomObject>
    <description>The definition of a criteria that belongs to 1 assessment stage definition and will be instantiated into each assessment that is generated for the particular stage.</description>
    <label>Assessment Criteria Definition</label>
    <nameField>
        <label>Assessment Criteria Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Criteria Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>