force-app/main/default/objects/Assessment_Criteria_Definition__c/fields/Assessment_Stage_Definition__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Stage_Definition__c</fullName>
    <label>Assessment Stage Definition</label>
    <referenceTo>Assessment_Stage_Definition__c</referenceTo>
    <relationshipLabel>Assessment Criteria Definitions</relationshipLabel>
    <relationshipName>Assessment_Criteria_Definitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>