force-app/main/default/objects/Assessment_Criteria_Definition__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Assessment Criteria category (for reporting/grouping purposes).</description>
    <inlineHelpText>Assessment Criteria category (for reporting/grouping purposes).</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Feasibility</fullName>
            </value>
            <value>
                <fullName>Social impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>