force-app/main/default/objects/Assessment_Criteria_Definition__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This field can be used to guide the user when filling in the Assessment. The description will be shown as a helptext in the assessment form.</description>
    <inlineHelpText>This field can be used to guide the user when filling in the Assessment. The description will be shown as a helptext in the assessment form.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>