force-app/main/default/objects/Assessment_Criteria_Definition__c/fields/Maximum_Rating__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Rating__c</fullName>
    <label>Maximum Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>