force-app/main/default/objects/Assessment_Criteria_Definition__c/fields/Minimum_Rating__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Rating__c</fullName>
    <label>Minimum Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>