force-app/main/default/objects/Assessment_Criteria_Definition__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>(optional) a weight definition can be given here. The weight will be copied into the Assessment Criteria records and can be used to calculate a numerical score per Assessment.</description>
    <inlineHelpText>(optional) a weight definition can be given here. The weight will be copied into the Assessment Criteria records and can be used to calculate a numerical score per Assessment.</inlineHelpText>
    <label>Weight</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>