force-app/main/default/objects/Assessment_Criteria_Definition__c/validationRules/Maximum_Maximum_Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Maximum_Maximum_Rating</fullName>
    <active>true</active>
    <errorConditionFormula>Maximum_Rating__c &gt; 10</errorConditionFormula>
    <errorDisplayField>Maximum_Rating__c</errorDisplayField>
    <errorMessage>The maximum value is 10</errorMessage>
</ValidationRule>