force-app/main/default/objects/Assessment_Criteria_Definition__c/validationRules/Maximum_Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Maximum_Rating</fullName>
    <active>true</active>
    <errorConditionFormula>Maximum_Rating__c &lt;= Minimum_Rating__c</errorConditionFormula>
    <errorDisplayField>Maximum_Rating__c</errorDisplayField>
    <errorMessage>Maximum Rating must be greater than Minimum Rating</errorMessage>
</ValidationRule>