force-app/main/default/objects/Assessment_Criteria_Definition__c/validationRules/Minimum_Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Rating</fullName>
    <active>true</active>
    <errorConditionFormula>Minimum_Rating__c &gt;= Maximum_Rating__c</errorConditionFormula>
    <errorDisplayField>Minimum_Rating__c</errorDisplayField>
    <errorMessage>Minimum Rating must be less than Maximum Rating</errorMessage>
</ValidationRule>