force-app/main/default/objects/Assessment_Criteria_Definition__c/validationRules/Negative_Maximum_Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Maximum_Rating</fullName>
    <active>true</active>
    <errorConditionFormula>Maximum_Rating__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Maximum_Rating__c</errorDisplayField>
    <errorMessage>Negative values not allowed</errorMessage>
</ValidationRule>