force-app/main/default/objects/Assessment_Criteria_Definition__c/validationRules/Picklist_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Picklist_Values</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Type__c) == &#39;Picklist&#39;, ISBLANK(Picklist_Values__c))</errorConditionFormula>
    <errorDisplayField>Picklist_Values__c</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>